--- a/vh-davsvn.conf
+++ b/vh-davsvn.conf
@@ -3,9 +3,11 @@ LoadModule authz_svn_module /usr/lib/apache2/mod_authz_svn.so
 
 <Location /svn>
 DAV svn
+DavDepthInfinity on
 SVNParentPath /var/svn
 SVNListParentPath on
 SVNAutoversioning on
+
 AuthType Basic
 AuthName "Subversion Repository"
 AuthUserFile /etc/apache2/conf.d/davsvn.htpasswd
