two users two sets of permissions

--- a/vh-davsvn.conf
+++ b/vh-davsvn.conf
@@ -4,11 +4,10 @@ LoadModule authz_svn_module /usr/lib/apache2/mod_authz_svn.so
 <Location /svn>
 DAV svn
 SVNParentPath /var/svn
-SVNAutoversioning on
-
 AuthType Basic
 AuthName "Subversion Repository"
 AuthUserFile /etc/apache2/conf.d/davsvn.htpasswd
+AuthzSVNAccessFile /etc/apache2/conf.d/authz.authz
 Order deny,allow
 Require valid-user
 </Location>
